# ckb-ssri-std

./: .gitignore  Cargo.toml  README.md  test.json
ckb-ssri-std/: Cargo.toml  README.md
ckb-ssri-std-proc-macro/: Cargo.toml
ckb-ssri-std-proc-macro/src/: lib.rs
ckb-ssri-std/src/: lib.rs  macros.rs
ckb-ssri-std/src/public_module_traits/: udt.rs
ckb-ssri-std/src/utils/: mod.rs
ckb-ssri-std/src/utils/syscalls/: native.rs
ckb_ssri_sdk/: Cargo.toml  README.md
ckb_ssri_sdk/src/: lib.rs  macros.rs  prelude.rs  public_module_traits.rs
ckb_ssri_sdk/src/public_module_traits/: cobuild.rs  deterministic.rs  mod.rs  udt.rs
ckb_ssri_sdk/src/utils/: high_level.rs  mod.rs
ckb_ssri_sdk/src/utils/syscalls/: mod.rs  native.rs
ckb_ssri_sdk_proc_macro/: Cargo.toml
ckb_ssri_sdk_proc_macro/src/: lib.rs
contracts/pausable-udt/: Cargo.toml  README.md
contracts/pausable-udt-ssri/: README.md
contracts/pausable-udt-ssri/src/: modules.rs
contracts/pausable-udt/src/: ckb_types_serde_molecule.rs  error.rs  fallback.rs  main.rs  modules.rs  utils.rs
contracts/udt-ssri/: Cargo.toml
contracts/udt-ssri/src/: error.rs  main.rs  modules.rs
example_contracts/pausable-udt/: Cargo.toml
example_contracts/pausable-udt-ssri/: Cargo.toml
example_contracts/pausable-udt-ssri/src/: error.rs  main.rs  modules.rs
example_contracts/pausable-udt/src/: error.rs  fallback.rs  main.rs  modules.rs  utils.rs
migrations/: 2024-10-27-134043.json
migrations/testnet/: 2024-10-27-173919.json  deployment.json
tests/: Cargo.toml
tests/src/: lib.rs  ssri.rs  tests.rs  tool.rs  utils.rs
wasm_tools/ssri_ts_toolkit/: Cargo.toml  README.md
wasm_tools/ssri_ts_toolkit/src/: lib.rs
wikis/: Quick Starts: Interact with SSRI Contract with @ckb-ccc.md
