[workspace]
resolver = "2"

members = [
  "ckb_ssri_sdk",
  "ckb_ssri_sdk_proc_macro",
  # Please don't remove the following line, we use it to automatically
  # detect insertion point for newly generated crates.
  # @@INSERTION_POINT@@
  "contracts/udt-ssri",
  "tests",
]

[profile.release]
overflow-checks = true
strip = true
codegen-units = 1
