[workspace]
resolver = "2"

members = [
  "ckb-ssri-std",
  "ckb-ssri-std-proc-macro",
  # Please don't remove the following line, we use it to automatically
  # detect insertion point for newly generated crates.
  # @@INSERTION_POINT@@
]

[profile.release]
overflow-checks = true
strip = true
codegen-units = 1
