[package]
name = "ckb_ssri_sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
# quote = "1.0"
# syn = { version = "2.0", features = ["full"] }
ckb-std = { version = "0.16.4", features = [
  "allocator",
  "ckb-types",
] }
serde_molecule = { version = "1.1.0", default-features = false, features = [
  "alloc",
] }
serde = { version = "1.0.210", default-features = false, features = ["derive"] }
