[package]
name = "tests"
version = "0.1.0"
edition = "2021"

[dependencies]
ckb-testtool = "0.10.2"
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["macros"] }  # Required for async tests
ckb-hash = "0.116.1"
ckb-std = { version = "0.15.1", features = ["ckb2023"] }
ckb_ssri_sdk = { path = "../ckb_ssri_sdk" }
