[package]
name = "pausable-udt"
version = "0.1.0"
edition = "2021"

[dependencies]
ckb-std = { version = "0.15.1", features = ["ckb2023", "allocator", "ckb-types"] }
ckb_ssri_sdk = { path = "../../ckb_ssri_sdk" }
serde_molecule = { version = "1.1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0.210", default-features = false, features = ["derive"] }
ckb_ssri_sdk_proc_macro = { path = "../../ckb_ssri_sdk_proc_macro" }
[profile.release]
overflow-checks = true
opt-level = 3
panic = 'abort'
strip = true
lto = true
