[package]
name = "ssri_ts_toolkit"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_molecule = "1.0.1"
wasm-bindgen = "0.2.93"
serde = { version = "1.0.208", default-features = false, features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
syn = { version = "2.0", features = ["full", "parsing"] }
js-sys = "0.3"
ckb_ssri_sdk = { path = "../../ckb_ssri_sdk" }
console_error_panic_hook = "0.1.7"

[lib]
crate-type = ["cdylib"]

[dependencies.web-sys]
version = "0.3"
features = ["console"]